# gk-cov-map

./: .gitignore  ACCEPTANCE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
annotation_tool/: app.js  geometry.js  index.html  mp4fps.js  record.js  styles.css
docs/: annotation-benchmark.md  spline-choice.md
examples/: simulated_200.jsonl  synthetic_expected.json
examples/demo_output/: report.html  summary.json  surface_grid.csv
src/gkcoverage/: __init__.py  cli.py  constants.py  homography.py  model.py  schema.py  simulate.py  visualize.py
src/goalkeeper_coverage_surface.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_annotation_javascript.py  test_cli.py  test_model_validation.py  test_report_contents.py  test_schema_and_geometry.py  test_visualization.py
