[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goalkeeper-coverage-surface"
version = "0.1.0"
description = "Censoring-aware penalty-kick goalkeeper coverage surfaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "scipy>=1.14",
  "matplotlib>=3.9",
  "pydantic>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[project.scripts]
gkcoverage = "gkcoverage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = ["slow: simulation-based acceptance validation"]
